[gd_scene load_steps=20 format=2]

[ext_resource path="res://fonts/Champignon.otf" type="DynamicFontData" id=1]
[ext_resource path="res://code/scenes/scenarioMakeYourOwnFace.gd" type="Script" id=2]
[ext_resource path="res://sprites/section5/sc5_walt.png" type="Texture" id=3]
[ext_resource path="res://sprites/section5/sc5_matpat.png" type="Texture" id=4]
[ext_resource path="res://fonts/SwanseaBoldItalic-p3Dv.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/section5/sc5_squid.png" type="Texture" id=6]
[ext_resource path="res://sprites/section5/sc5_rock.png" type="Texture" id=7]
[ext_resource path="res://sprites/section5/sc5_micheal.png" type="Texture" id=8]
[ext_resource path="res://audio/music/1156712_Dobuita-at-Dusk.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/section5/sc5_hallway.jpg" type="Texture" id=10]
[ext_resource path="res://audio/sfx/moai.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 68
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[node name="Root" type="Node2D"]
script = ExtResource( 2 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]

[node name="BG" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 320, 240 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="FirstPortion" type="Node2D" parent="BG"]

[node name="Label" type="Label" parent="BG/FirstPortion"]
margin_left = 81.0
margin_top = 123.0
margin_right = 559.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 1 )
text = "Make your own spooky scary
analog horror face"
align = 1
valign = 1

[node name="Label2" type="Label" parent="BG/FirstPortion"]
margin_left = 90.0
margin_top = 288.0
margin_right = 550.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 2 )
text = "presented by the man in your walls :)"
align = 1
valign = 1

[node name="SecondPortion" type="Node2D" parent="BG"]
visible = false

[node name="Label" type="Label" parent="BG/SecondPortion"]
margin_left = 81.0
margin_top = 3.0
margin_right = 559.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Choose a face"
align = 1
valign = 1

[node name="Faces" type="Node2D" parent="BG/SecondPortion"]

[node name="Face1" type="Sprite" parent="BG/SecondPortion/Faces"]
position = Vector2( 101.5, 218 )
scale = Vector2( 0.276, 0.276 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="BG/SecondPortion/Faces/Face1"]
margin_left = -251.0
margin_top = -234.0
margin_right = 262.0
margin_bottom = 255.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Face2" type="Sprite" parent="BG/SecondPortion/Faces"]
position = Vector2( 325, 218 )
scale = Vector2( 0.276, 0.276 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="BG/SecondPortion/Faces/Face2"]
margin_left = -245.0
margin_top = -247.0
margin_right = 252.0
margin_bottom = 244.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="Face3" type="Sprite" parent="BG/SecondPortion/Faces"]
position = Vector2( 539, 218 )
scale = Vector2( 0.276, 0.276 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="BG/SecondPortion/Faces/Face3"]
margin_left = -264.151
margin_top = -262.579
margin_right = 250.849
margin_bottom = 257.421
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="Face4" type="Sprite" parent="BG/SecondPortion/Faces"]
position = Vector2( 193, 377.003 )
scale = Vector2( 0.276, 0.276 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="BG/SecondPortion/Faces/Face4"]
margin_left = -264.151
margin_top = -262.579
margin_right = 250.849
margin_bottom = 257.421
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="Face5" type="Sprite" parent="BG/SecondPortion/Faces"]
position = Vector2( 452, 377.003 )
scale = Vector2( 0.276, 0.276 )
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="BG/SecondPortion/Faces/Face5"]
margin_left = -264.151
margin_top = -262.579
margin_right = 250.849
margin_bottom = 257.421
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="ThirdPortion" type="Node2D" parent="BG"]
visible = false

[node name="Label" type="Label" parent="BG/ThirdPortion"]
margin_left = 81.0
margin_top = 3.0
margin_right = 559.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Configure your face"
align = 1
valign = 1

[node name="Done!" type="Button" parent="BG/ThirdPortion"]
margin_left = 273.0
margin_top = 367.0
margin_right = 373.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 8 )
text = "Done!"

[node name="Sliders" type="Node2D" parent="BG/ThirdPortion"]

[node name="HSlider" type="HSlider" parent="BG/ThirdPortion/Sliders"]
margin_left = 162.0
margin_top = 431.0
margin_right = 323.053
margin_bottom = 457.945
mouse_filter = 1
mouse_default_cursor_shape = 2
min_value = -15.0
max_value = 35.0
value = 1.0
scrollable = false

[node name="Label" type="Label" parent="BG/ThirdPortion/Sliders/HSlider"]
margin_left = 1.0
margin_top = -21.0
margin_right = 160.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 7 )
text = "brightness"
align = 1
valign = 1

[node name="HSlider2" type="HSlider" parent="BG/ThirdPortion/Sliders"]
margin_left = 330.0
margin_top = 431.0
margin_right = 491.053
margin_bottom = 457.945
mouse_filter = 1
mouse_default_cursor_shape = 2
min_value = -15.0
max_value = 50.0
value = 1.0
scrollable = false

[node name="Label" type="Label" parent="BG/ThirdPortion/Sliders/HSlider2"]
margin_left = 1.0
margin_top = -21.0
margin_right = 160.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 7 )
text = "contrast"
align = 1
valign = 1

[node name="FourthPortion" type="Node2D" parent="BG"]
visible = false

[node name="Sc5Hallway" type="Sprite" parent="BG/FourthPortion"]
position = Vector2( 320, 240 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="SFX" type="AudioStreamPlayer" parent="BG"]
stream = ExtResource( 11 )

[node name="Face" type="Sprite" parent="BG"]
visible = false
position = Vector2( 325, 250 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="SFX" type="AudioStreamPlayer" parent="BG/Face"]
stream = ExtResource( 11 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="BG/SecondPortion/Faces/Face1/Button" to="." method="_on_Face1_pressed"]
[connection signal="pressed" from="BG/SecondPortion/Faces/Face2/Button" to="." method="_on_Face2_pressed"]
[connection signal="pressed" from="BG/SecondPortion/Faces/Face3/Button" to="." method="_on_Face3_pressed"]
[connection signal="pressed" from="BG/SecondPortion/Faces/Face4/Button" to="." method="_on_Face4_pressed"]
[connection signal="pressed" from="BG/SecondPortion/Faces/Face5/Button" to="." method="_on_Face5_pressed"]
[connection signal="pressed" from="BG/ThirdPortion/Done!" to="." method="_on_Done_pressed"]
